--- a/themes/vanilla.css
+++ b/themes/vanilla.css
@@ -535,7 +535,7 @@ x-button[skin="recessed"][pressed] {
   background: rgba(0, 0, 0, 0.75);
 }
 
-x-button[skin="recessed"] x-label {
+x-button[skin="recessed"] > x-label {
   font-size: 12px;
   font-weight: 700;
   text-align: center;
